...
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<resources>
    <string name="changes_empty">No changes</string>
    <string name="changes_count_unavailable">Couldn’t load the change count.</string>
    <string name="changes_retry_count">Retry count</string>
    <string name="changes_author_date">By %1$s on %2$s</string>
    <string name="changes_many_files">9+</string>
    <plurals name="changes_files">
        <item quantity="one">%d changed file</item>
        <item quantity="other">%d changed files</item>
    </plurals>
...
